--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "motion": "^11.15.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "short-unique-id": "^5.2.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "yarn": "^1.22.22",
